--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,3 +63,11 @@
 .btn{
     border-radius: 20px;
 }
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
