layouting dan add sweet alert di fitur hapus profil pegawai

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,9 +60,9 @@
     position: fixed;
 }
 
-.btn{
+/* .btn{
     border-radius: 20px;
-}
+} */
 
 .material-symbols-outlined {
   font-variation-settings:
