--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,3 +78,11 @@
 .beranda{
     margin-top: 20px;
 }
+
+#datepicker{
+    font-size:15px;
+    background-color: #89C791;
+    box-shadow: 10px;
+    width: 200px;
+    height: 35px;
+}
